# demandpredict

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  vercel.json
api/: __init__.py  _env.py  analysis.py  analyze.py  calculations.py  calculations.ts  health.py  index.py  openai_client.py  parse_json_util.py  schemas.py  search_context.py  season_timeline.py  spaces.ts  system_prompt.py
api/reports/: [reportId].ts
apps/api/: package.json  pyproject.toml
apps/api/app/: database.py  main.py
apps/api/app/core/: config.py  errors.py  logging_setup.py  middleware.py  request_context.py
apps/api/app/models/: calculation.py  evidence.py  report.py  space.py  user.py
apps/api/app/repositories/: calculation_repo.py  evidence_repo.py  report_repo.py  space_repo.py
apps/api/app/routes/: calculations.py  reports.py  spaces.py
apps/api/app/schemas/: calculation.py  raw_signal.py  report_contracts.py  spaces.py
apps/api/app/services/: apify_service.py  claude_service.py  opportunity_engine.py  pdf_service.py  prompt_templates.py  query_expander.py  report_builder.py  scoring_engine.py  signal_processor.py  trendline_engine.py
apps/api/app/tests/integration/: test_health.py
apps/api/app/tests/unit/: test_scoring_engine.py
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  (+1 more)
docs/: ARCHITECTURE.md
src/: App.tsx  index.css  vite-env.d.ts
(+29 files in other folders)
