[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foc-api"
version = "0.1.0"
description = "AI Fashion Opportunity Calculator API"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "sqlmodel>=0.0.22",
  "httpx>=0.28.1",
  "anthropic>=0.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
